# hypr-control

./: .gitignore  CMakeLists.txt  README.md  hypr-control.desktop  main.cpp
